--- a/language/bas.language.json
+++ b/language/bas.language.json
@@ -1,6 +1,6 @@
 {
     "comments": {
-        "lineComment": ";"
+        "lineComment": "REM"
     },
     "brackets": [
         ["{", "}"],
@@ -8,17 +8,13 @@
         ["(", ")"]
     ],
     "autoClosingPairs": [
-        ["{", "}"],
         ["[", "]"],
         ["(", ")"],
-        ["\"", "\""],
-        ["'", "'"]
+        ["\"", "\""]
     ],
     "surroundingPairs": [
-        ["{", "}"],
         ["[", "]"],
         ["(", ")"],
-        ["\"", "\""],
-        ["'", "'"]
+        ["\"", "\""]
     ]
 }
