--- a/language/asm.grammar.json
+++ b/language/asm.grammar.json
@@ -116,6 +116,9 @@
 				},
 				{
 					"include": "#generic-opcodes-illegal"
+				},
+				{
+					"include": "#generic-opcodes-65c02"
 				}
 			]
 		},
@@ -143,7 +146,18 @@
 				}
 			]
 		},
-
+		"generic-opcodes-65c02": {
+			"patterns": [
+				{
+					"name": "keyword.instructions",
+                    "match": "(?i)[\\s]*\\b((bbr|bbs|rmb|smb)[0-7]|trb|tsb|phx|phy|plx|ply|stz)\\b"
+				},
+				{
+					"name": "keyword.control",
+					"match": "(?i)[\\s]*\\b(bra)\\b"
+				}
+			]
+		},
 		"generic-directives": {
 			"patterns": [
 				{
