--- a/language/bas.grammar.json
+++ b/language/bas.grammar.json
@@ -40,13 +40,13 @@
 				},
 				{
 					"name": "meta.preprocessor",
-					"begin": "#\\s*(include|lowercase|lower|uppercase|upper|cset0|cset1)\\b",
+					"begin": "^\\s*#\\s*(include|lowercase|lower|uppercase|upper|cset0|cset1)\\b",
 					"end": "$",
 					"comment": "preprocessor directives"
 				},
 				{
 					"name": "comment.line",
-					"begin": "#",
+					"begin": "^\\s*(#|;)",
 					"end": "$",
 					"comment": "Single line comment"
 				}
